--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <span class="icon animated" data-animation="fadeInDown"><i class="tsti-comment-alt text-tertiary"></i></span>
                         <h2 style="margin-bottom:5px;margin-top:10px"><strong>Amjad Seyedi</strong></h2>
                         <h4 style="margin-bottom:5px;margin-top:5px; color:#006747"><strong>PhD student</strong></h4>
-                        <h6 style="margin-bottom:0; color:#a69d76;">Department of Mathematics and Operational Research<br>Polytechnic Faculty of Mons
+                        <h6 style="margin-bottom:0; color:#555555;">Department of Mathematics and Operational Research<br>Polytechnic Faculty of Mons
 <br>University of Mons, Belgium</h6>
                         
                         <span class="event-name"><a href="mailto:seyedamjad.seyedi@umons.ac.be">seyedamjad.seyedi@umons.ac.be</a></span>
@@ -285,7 +285,7 @@
                               <strong>Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</strong></a> 
                               <br>
                               A. Mohammadi, <u>A. Seyedi</u>, F. Akhlaghian, and R. Pir Mohammadiani,  
-                              <span style="color:#a69d76;">Applied Soft Computing 2024.
+                              <span style="color:#555555;">Applied Soft Computing 2024.
                               </span>
                               </span>
                             </div>
@@ -300,7 +300,7 @@
                               <strong>Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, A. Abdollahpouri, and F. Akhlaghian,  
-                              <span style="color:#a69d76;">Engineering Applications of Artificial Intelligence 2024.
+                              <span style="color:#555555;">Engineering Applications of Artificial Intelligence 2024.
                               </span>
                               </span>
                             </div>
@@ -314,7 +314,7 @@
                               <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
                               <br>
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
-                              <span style="color:#a69d76;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2024.
+                              <span style="color:#555555;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2024.
                               </span>
                               </span>
                             </div>
@@ -329,7 +329,7 @@
                               <strong>Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization</strong></a> 
                               <br>
                               M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian,  
-                              <span style="color:#a69d76;">    Information Sciences 2024.
+                              <span style="color:#555555;">    Information Sciences 2024.
                               </span>
                               </span>
                             </div>
@@ -347,7 +347,7 @@
                               <strong>Multi-label feature selection with global and local label correlation</strong></a> 
                               <br>
                               M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi, 
-                              <span style="color:#a69d76;">Expert Systems with Applications 2024.
+                              <span style="color:#555555;">Expert Systems with Applications 2024.
                               </span>
                               </span>
                             </div>
@@ -362,7 +362,7 @@
                               <strong>Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</strong></a> 
                               <br>
                               A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
-                              <span style="color:#a69d76;">    Pattern Recognition 2024.
+                              <span style="color:#555555;">    Pattern Recognition 2024.
                               </span>
                               </span>
                             </div>
@@ -377,7 +377,7 @@
                               <strong>Link Prediction by Adversarial Nonnegative Matrix Factorization</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, F. Akhlaghian, and A. Abdollahpouri, 
-                              <span style="color:#a69d76;">Knowledge-Based Systems 2023.
+                              <span style="color:#555555;">Knowledge-Based Systems 2023.
                               </span>
                               </span>
                             </div>
@@ -391,7 +391,7 @@
                               <strong>Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering</strong></a> - 
                               <a style="color:initial;" href="https://github.com/ChavoshiNejad/S4NMF" target="_blank">[source code]</a><br>
                               J. Chavoshinejad, <u>A. Seyedi</u>, F. Akhlaghian, and N. Salahian, 
-                              <span style="color:#a69d76;">Pattern Recognition 2023.
+                              <span style="color:#555555;">Pattern Recognition 2023.
                               </span>
                               </span>
                             </div>
@@ -405,7 +405,7 @@
                               <strong>Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/EADNMF" target="_blank">[source code]</a><br>
                               <u>A. Seyedi</u>, F. Akhlaghian, A. Lotfi, N. Salahian, and J. Chavoshinejad, 
-                              <span style="color:#a69d76;">Information Sciences 2023.</span>
+                              <span style="color:#555555;">Information Sciences 2023.</span>
                               </span>
                             </div>
                         </div>
@@ -418,7 +418,7 @@
                               <strong>Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/DANMF_CRFR" target="_blank">[source code]</a><br>
                               N. Salahian, F. Akhlaghian, <u>A. Seyedi</u>, and J. Chavoshinejad, 
-                              <span style="color:#a69d76;">Expert Systems with Applications 2023.
+                              <span style="color:#555555;">Expert Systems with Applications 2023.
                               </span>
                               </span>
                             </div>
@@ -432,7 +432,7 @@
                               <strong>Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/RAsNMF" target="_blank">[source code]</a><br>
                               R. Abdollahi, <u>A. Seyedi</u>, and M.R. Noorimehr, 
-                              <span style="color:#a69d76;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2020.
+                              <span style="color:#555555;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2020.
                               </span>
                               </span>
                             </div>
@@ -446,7 +446,7 @@
                                 <strong>Self-Paced Multi-Label Learning with Diversity</strong></a> -
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/SPMLD" target="_blank">[source code]</a><br>
                                 <u>A. Seyedi</u>, S. Ghodsi, F. Akhlaghian, M. Jalili, and P. Moradi, 
-                                <span style="color:#a69d76;">Asian Conference on Machine Learning (ACML) 2019.
+                                <span style="color:#555555;">Asian Conference on Machine Learning (ACML) 2019.
                                 </span>
                                 </span>
                             </div>
@@ -460,7 +460,7 @@
                                 <strong>Dynamic Graph-based Label Propagation for Density Peaks Clustering</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/DPC-DLP" target="_blank">[source code]</a><br>
                                 <u>A. Seyedi</u>, A. Lotfi, P. Moradi, and N.N. Qader, 
-                                <span style="color:#a69d76;">Expert Systems with Applications 2019.
+                                <span style="color:#555555;">Expert Systems with Applications 2019.
                                 </span>
                                 </span>
                             </div>
@@ -473,7 +473,7 @@
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/AISP.2017.8324084" target="_blank">
                                 <strong>A Weakly-Supervised Factorization Method with Dynamic Graph Embedding</strong></a><br>
                                 <u>A. Seyedi</u>, P. Moradi, and F. Akhlaghian Tab, 
-                                <span style="color:#a69d76;">IEEE Artificial Intelligence and Signal Processing Conference (AISP) 2017.
+                                <span style="color:#555555;">IEEE Artificial Intelligence and Signal Processing Conference (AISP) 2017.
                                 </span>
                                 </span>
                             </div>
@@ -486,7 +486,7 @@
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/IranianCEE.2017.7985435" target="_blank">
                                 <strong>A Clustering-based Matrix Factorization Method to Improve the Accuracy of Recommendation Systems</strong></a><br>
                                 Z. Shajarian, <u>A. Seyedi</u>, and P. Moradi, 
-                                <span style="color:#a69d76;">IEEE Iranian Conference on Electrical Engineering (ICEE) 2017.
+                                <span style="color:#555555;">IEEE Iranian Conference on Electrical Engineering (ICEE) 2017.
                                 </span>
                                 </span>
                             </div>
@@ -500,7 +500,7 @@
                                 <strong>An Improved Density Peaks Method for Data Clustering</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/IDPC" target="_blank">[source code]</a><br>
                                 A. Lotfi, <u>A. Seyedi</u>, and P. Moradi, 
-                                <span style="color:#a69d76;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2016.</span>
+                                <span style="color:#555555;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2016.</span>
                                 </span>
                             </div>
                         </div>
@@ -523,31 +523,31 @@
 		    <div class="timeline-event te-primary">
                         <span class="event-name">PhD, Jun 2024 - Jun 2028</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Mathematics and Operational Research</h5></span>
-                        <span class="event-description" style="color:#a69d76;">University of Mons, Mons, Belgium</span>
+                        <span class="event-description" style="color:#555555;">University of Mons, Mons, Belgium</span>
                     </div>
                         <!-- Single event -->	
                     <div class="timeline-event te-primary">
                         <span class="event-name">Master's Degree, Sep 2015 - Feb 2018</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Artificial Intelligence</h5></span>
-                        <span class="event-description" style="color:#a69d76;">University of Kurdistan, Sanandaj, Iran</span>
+                        <span class="event-description" style="color:#555555;">University of Kurdistan, Sanandaj, Iran</span>
                     </div>
                         <!-- Single event -->
                     <div class="timeline-event te-primary">
                         <span class="event-name">Bachelor's Degree, Jan 2012 - Jun 2014</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Software Engineering</h5></span>
-                        <span class="event-description" style="color:#a69d76;">Amirkabir Technical College, Arak, Iran</span>
+                        <span class="event-description" style="color:#555555;">Amirkabir Technical College, Arak, Iran</span>
                     </div>
                     <!-- Single event -->
                     <div class="timeline-event te-primary">
                         <span class="event-name">Associate Degree, Jan 2009 - Jun 2011</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Computer Software</h5></span>
-                        <span class="event-description" style="color:#a69d76;">Technical College of Tabriz, Tabriz, Iran</span>
+                        <span class="event-description" style="color:#555555;">Technical College of Tabriz, Tabriz, Iran</span>
                     </div>
                     <!-- Single event -->
                     <div class="timeline-event te-primary">
                         <span class="event-name">Student, Sep 2005 - Jun 2007</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Computer</h5></span>
-                        <span class="event-description" style="color:#a69d76;">Taleghani Vocational School, Sanandaj, Iran</span>
+                        <span class="event-description" style="color:#555555;">Taleghani Vocational School, Sanandaj, Iran</span>
                     </div>
                 </div>
             </div>
