--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                        <p style="margin-top:10px; margin-bottom:0px" class="lead" align=justify>As a graduate research assistant at the <a href="https://uok.ac.ir/en/" target="_blank">University of Kurdistan</a>, I work on representation learning with a focus on robustness and generalization. I also lead the <a style="color:#a80039" href="https://amlteams.github.io" target="_blank"><u>Algebraic Machine Learning (AML) team</u></a>, a group that explores fundamental methods in unsupervised machine learning and representation theory. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a style="color:#a80039" href='https://scholar.google.com/citations?user=bR5ttrwAAAAJ' target="_blank">Dr. Parham Moradi</a> and <a style="color:#a80039" href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ" target="_blank">Dr. Fardin Akhlaghian</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, recommendation systems, and multi-label classification. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
                     -->
 		    </div>
-                    <span><a style="color:#CFC493;" href="cv/SeyediCV.pdf" target="_blank" class="btn btn-sm btn-secondary animated" data-animation="bounceIn">
+                    <span><a style="color:#ffffff;" href="cv/SeyediCV.pdf" target="_blank" class="btn btn-sm btn-secondary animated" data-animation="bounceIn">
                     <span>Curriculum Vitae</span><i class="ti-id-badge"></i></a></span>
                     <!-- Resume Box / Skills -->
                     <div class="resume-box">
