--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://doi.org/10.1016/j.asoc.2024.112012" target="_blank">
                               <strong>Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</strong></a> 
                               <br>
                               A. Mohammadi, <u>A. Seyedi</u>, F. Akhlaghian, and R. Pir Mohammadiani,  
