--- a/index.html
+++ b/index.html
@@ -277,7 +277,22 @@
             <div class="row padding-lg">
                 <div class="col-lg-11 col-sm-0">
                    <!-- Testimonial -->
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://" target="_blank">
+                              <strong>A new bi-level deep human action representation structure based on the sequence of sub-actions</strong></a> 
+                              <be>
+			      F. Akhlaghian Tab, M. Ramezani, H. Afshoon, <u>A. Seyedi</u>, and A. Moradyani \\
+                              <span style="color:#555555;">Neural Computing and Applications 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
 
+
+			
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
