--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                               <strong>A new bi-level deep human action representation structure based on the sequence of sub-actions</strong></a> 
                               <br>
 			      F. Akhlaghian Tab, M. Ramezani, H. Afshoon, <u>A. Seyedi</u>, and A. Moradyani 
-                              <br><span style="color:#555555;">Neural Computing and Applications 2024.
+                              <span style="color:#555555;">Neural Computing and Applications 2024.
                               </span>
                               </span>
                             </div>
@@ -300,7 +300,7 @@
                               <strong>Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</strong></a> 
                               <br>
                               A. Mohammadi, <u>A. Seyedi</u>, F. Akhlaghian, and R. Pir Mohammadiani,  
-                              <br><span style="color:#555555;">Applied Soft Computing 2024.
+                              <span style="color:#555555;">Applied Soft Computing 2024.
                               </span>
                               </span>
                             </div>
@@ -315,7 +315,7 @@
                               <strong>Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, A. Abdollahpouri, and F. Akhlaghian,  
-                              <br><span style="color:#555555;">Engineering Applications of Artificial Intelligence 2024.
+                              <span style="color:#555555;">Engineering Applications of Artificial Intelligence 2024.
                               </span>
                               </span>
                             </div>
@@ -329,7 +329,7 @@
                               <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
                               <br>
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
-                              <br><span style="color:#555555;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2024.
+                              <span style="color:#555555;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2024.
                               </span>
                               </span>
                             </div>
