--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://" target="_blank">
-                              <strong>A new bi-level deep human action representation structure based on the sequence of sub-actions</strong></a> 
+                              <strong>A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</strong></a> 
                               <br>
 			      F. Akhlaghian Tab, M. Ramezani, H. Afshoon, <u>A. Seyedi</u>, and A. Moradyani 
                               <span style="color:#555555;">Neural Computing and Applications 2024.
@@ -359,7 +359,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
-                              <strong>Multi-label feature selection with global and local label correlation</strong></a> 
+                              <strong>Multi-Label Feature Selection with Global and Local Label Correlation</strong></a> 
                               <br>
                               M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi, 
                               <span style="color:#555555;">Expert Systems with Applications 2024.
