--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="resume-box" style="margin-bottom: 20px">
                         <span class="icon animated" data-animation="fadeInDown"><i class="tsti-comment-alt text-tertiary"></i></span>
                         <h2 style="margin-bottom:5px;margin-top:10px"><strong>Amjad Seyedi</strong></h2>
-                        <h4 style="margin-bottom:5px;margin-top:5px; color:#a80039"><strong>PhD student</strong></h4>
+                        <h4 style="margin-bottom:5px;margin-top:5px; color:#a80039"><strong>PhD Candidate</strong></h4>
                         <h6 style="margin-bottom:0; color:#555555;">Department of Mathematics and Operational Research<br>Polytechnic Faculty of Mons
 <br>University of Mons, Belgium</h6>
                         
