--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://arxiv.org/abs/2402.10756" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://doi.org/10.1007/978-981-97-2242-6_23" target="_blank">
                               <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
                               <br>
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
