--- a/index.html
+++ b/index.html
@@ -266,12 +266,11 @@
                         <span class="icon animated" data-animation="fadeInDown"><i class="text-tertiary"></i></span>
                         <h4 style="margin-bottom:10px"><strong>News</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
-                            
-                            <li><b>Math:</b> linear algebra, numerical analysis, optimization</li>
-			<li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
-			<li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
-			<li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
-			<li><b>Applications:</b> remote sensing, recommendation, multi-view learning </li>
+
+				<li>I will attend the Autumn School on Constrained Optimization and Machine Learning, October 9-11, 2024, Trier University, Germany.</li>
+				<li>I will attend the SOCN Study Day, October 29, 2024, UCLouvain, Belgium.</li>
+				<li>I attended the ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science, August 27-30, 2024, UCLouvain, Belgium.</li>
+				<li>I started my PhD in Matrix Theory and Optimization at UMONS, Belgium, June 18, 2024. </li>
                         </ul> 
                     </div>
                 </div>
