--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
 
 				<li>I will attend the Autumn School on Constrained Optimization and Machine Learning, October 9-11, 2024, Trier University, Germany.</li>
-				<li>I will attend the SOCN Study Day, October 29, 2024, UCLouvain, Belgium.</li>
+				<li>I will attend the Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day, October 29, 2024, UCLouvain, Belgium.</li>
 				<li>I attended the ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science, August 27-30, 2024, UCLouvain, Belgium.</li>
 				<li>I started my PhD in Matrix Theory and Optimization at UMONS, Belgium, June 18, 2024. </li>
                         </ul> 
