--- a/index.html
+++ b/index.html
@@ -256,15 +256,15 @@
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
                             
                             <li><b>Math:</b> linear algebra, numerical analysis, optimization</li>
-			<li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
-			<li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
-			<li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
-			<li><b>Applications:</b> remote sensing, recommendation, multi-view learning </li>
+			    <li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
+			    <li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
+			    <li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
+			    <li><b>Applications:</b> remote sensing, recommendation, multi-view learning </li>
                         </ul> 
                     </div>
 		    <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="text-tertiary"></i></span>
-                        <h4 style="margin-bottom:10px"><strong>News</strong></h4>
+                        <h4 style="margin-bottom:10px"><strong>News!</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
 
 				<li>I will attend the Autumn School on Constrained Optimization and Machine Learning, October 9-11, 2024, Trier University, Germany.</li>
