--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                         <h4 style="margin-bottom:10px"><strong>News!</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
 				<li>I am on the organizing committee of the <a href=https://sites.google.com/view/lrma25 target="_blank">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, September 11-12, 2025, in Mons.</li>
-				<li>I will attend the <a href=https://sites.uclouvain.be/socn/drupal/socn/node/393 target="_blank">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, October 29, 2024, UCLouvain, Belgium.</li>
-				<li>I will attend the <a href=https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/ target="_blank">Autumn School on Constrained Optimization and Machine Learning</a>, October 9-11, 2024, Trier University, Germany.</li>
-				<li>I attended the <a href=https://sites.uclouvain.be/algopt2024/ target="_blank">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, August 27-30, 2024, UCLouvain, Belgium.</li>
-				<li>I started my PhD in <a href=https://sites.google.com/site/nicolasgillis/team-members target="_blank">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024. </li>
+				<li>I will attend the <a style="color:#a80039" href=https://sites.uclouvain.be/socn/drupal/socn/node/393 target="_blank">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, October 29, 2024, UCLouvain, Belgium.</li>
+				<li>I will attend the <a style="color:#a80039" href=https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/ target="_blank">Autumn School on Constrained Optimization and Machine Learning</a>, October 9-11, 2024, Trier University, Germany.</li>
+				<li>I attended the <a style="color:#a80039" href=https://sites.uclouvain.be/algopt2024/ target="_blank">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, August 27-30, 2024, UCLouvain, Belgium.</li>
+				<li>I started my PhD in <a style="color:#a80039" href=https://sites.google.com/site/nicolasgillis/team-members target="_blank">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024. </li>
                         </ul> 
                     </div>
                 </div>
