--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <h4 style="margin-bottom:10px"><strong>Research Interests</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
                             
-                            <li><b>Math:</b> linear algebra, numerical analysis, optimization</li>
+                            <li><b>Math:</b> linear algebra, numerical analysis, constrained optimization</li>
 			    <li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
 			    <li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
 			    <li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
