--- a/index.html
+++ b/index.html
@@ -831,7 +831,8 @@ window.paceOptions = {
 <!-- JS Core -->
 <script src="assets/js/core.js"></script>
 
-<!-- Statcounter -->
+<!-- Default Statcounter code for Seyedi
+https://amjadseyedi@github.io -->
 <script type="text/javascript">
 var sc_project=12494759; 
 var sc_invisible=1; 
@@ -844,7 +845,8 @@ async></script>
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"></a></div></noscript>
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
 
 </body>
