--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://doi.org/10.1007/s00521-024-10370-4" target="_blank">
                               <strong>A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</strong></a> 
                               <br>
 			      F. Akhlaghian Tab, M. Ramezani, H. Afshoon, <u>A. Seyedi</u>, and A. Moradyani 
