--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#a80039" href="https://doi.org/10.1007/978-981-97-2242-6_23" target="_blank">
                               <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
-                              <br>
+                               - <a style="color:initial;" href="https://github.com/amjadseyedi/iFairNMTF" target="_blank">[source code]</a><br>     
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
                               <span style="color:#555555;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2024.
                               </span>
