--- a/index.html
+++ b/index.html
@@ -703,22 +703,22 @@
 				[Master] Sarina Khaledian (Supervisor: Dr. Akhlaghian) | 2022-Present 
 				<font color="#888888">	    
 				<br>	
-				[Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-2024
+				[Master] <a href="https://scholar.google.com/citations?user=8uql40MAAAAJ" target="_blank">Sayvan Soleymanbeigi</a> (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-2024
 				<br>
 				[Master] Arina Mohammadi (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2023
 				<br>      
                               [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				<br>
-				[Master] Mohammad Faraji (Supervisor: Dr. Akhlaghian) | 2021-2023 
+				[Master] <a href="https://scholar.google.com/citations?user=S8QF7LMAAAAJ" target="_blank">Mohammad Faraji</a> (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				 
 				<br>
-				[Master] Akram Hajiveiseh (Supervisor: Dr. Akhlaghian) | 2020-2023 
+				[Master] <a href="https://scholar.google.com/citations?user=0VjfV-YAAAAJ" target="_blank">Akram Hajiveiseh</a> (Supervisor: Dr. Akhlaghian) | 2020-2023 
 				<br>
-				[Master] Reza Mahmoodi (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) | 2021-2022 
+				[Master] <a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ" target="_blank">Reza Mahmoodi</a> (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) | 2021-2022 
 				<br>
-				[Master] Jovan Chavoshinejad (Supervisor: Dr. Akhlaghian) | 2020-2022 
+				[Master] <a href="https://scholar.google.com/citations?user=ANttTRIAAAAJ" target="_blank">Jovan Chavoshinejad</a> (Supervisor: Dr. Akhlaghian) | 2020-2022 
 				<br>
-				[Master] Navid Salahian (Supervisor: Dr. Akhlaghian) | 2020-2022 
+				[Master] <a href="https://scholar.google.com/citations?user=a_Q67kIAAAAJ" target="_blank">Navid Salahian</a> (Supervisor: Dr. Akhlaghian) | 2020-2022 
 				
 			</font>
                               </span>
@@ -735,9 +735,9 @@
 
 			      <span class="event-name" style="font-size:14px">
 			      <br>      
-                              [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
+                              [PhD] <a href="https://scholar.google.com/citations?hl=en&user=bDDX7RIAAAAJ" target="_blank">Wafa Barkhoda</a> (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
-				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
+				[PhD] <a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ" target="_blank">Reza Mahmoodi</a> (Supervisor: Dr. Akhlaghian) | 2022-Present
 			      <br>
 				[Master] Negin Jabbari (Supervisor: Dr. Akhlaghian - Advisor: Reza Mahmoodi) | 2023-Present
 			      <br>
@@ -746,7 +746,7 @@
 				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) | 2023-Present
                               <br>
 			<font color="#888888">	
-				[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
+				[Master] <a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ" target="_blank">Maryam Mozafari</a> (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
 				<br>
 				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
 			</font>
