--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 
 			      <span class="event-name" style="font-size:14px">
 			      <br>      
-                              [PhD] <a href="https://scholar.google.com/citations?hl=en&user=bDDX7RIAAAAJ" target="_blank">Wafa Barkhoda</a> (Supervisor: Dr. Akhlaghian) | 2022-Present
+                              [PhD] <a href="https://scholar.google.com/citations?user=bDDX7RIAAAAJ" target="_blank">Wafa Barkhoda</a> (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
 				[PhD] <a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ" target="_blank">Reza Mahmoodi</a> (Supervisor: Dr. Akhlaghian) | 2022-Present
 			      <br>
