--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) | 2023-Present
                               <br>
 			<font color="#888888">	
-				[Master] <a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ" target="_blank">Maryam Mozafari</a> (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
+				[Master] <a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ" target="_blank">Maryam Mozafari</a> (Supervisors: Dr. Pir Mohammadiani - Advisor: Dr. Akhlaghian) | 2021-2022
 				<br>
 				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
 			</font>
