--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/bio.jpg" alt="alt text" width="140px" height="140px" />&nbsp;</td>
-<td align="left"><p>PhD Candidate,<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a>, <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>,<a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
+<td align="left"><p>Doctoral researcher,<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a>, <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>,<a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
 Rue de Houdain 9, 7000 Mons, Belgium <br /> 
 Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://scholar.google.com/citations?user=gRU1aPYAAAAJ&amp;hl=en">Google Scholar</a>&nbsp;&nbsp;&nbsp;
