--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, September 11-12, 2025, in Mons.</b></p>
 </li>
-<li><p>I will deliver a speech on Matrix Factorization for Machine Learning, February 20, 2025, <a href="https://www.esat.kuleuven.be/stadius/">Dynamical Systems, STADIUS Center, KU Leuven</a>, Belgium.</p>
+<li><p>I will deliver a speech on Matrix Factorization for Machine Learning, February 20, 2025, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium.</p>
 </li>
 <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, October 29, 2024, UCLouvain, Belgium.</p>
 </li>
