--- a/Experiences.html
+++ b/Experiences.html
@@ -47,4 +47,23 @@
 </tr>
 </table>
 </body>
+
+<!-- Default Statcounter code for Seyedi
+https://amjadseyedi@github.io -->
+<script type="text/javascript">
+var sc_project=12494759; 
+var sc_invisible=1; 
+var sc_security="06ce839b"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12494759/0/06ce839b/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+  
 </html>
