--- a/Educations.html
+++ b/Educations.html
@@ -31,17 +31,17 @@
 <p><b>Mathematics</b> <br />
 Topics: low-rank matrix factorization, optimization, machine learning<br />
 Thesis title: [TBD] <br />
-Advisor : Prof. Nicolas Gillis <br />
+Advisors: Prof. Nicolas Gillis and Arnaud Vandaele <br />
 <b> <i>University of Mons, Mons, Belgium</i> </b></p>
 <h3><b>Master's Degree</b> (Sep 2015 - Feb 2018) <br /></h3>
 <p><b>Artificial Intelligence</b> <br />
 Topics: semi-supervised learning, multi-label learning, matrix factorization<br />
 Thesis title: "A Graph-based Semi-Supervised Learning Approach for Multi-Label Classification" <br />
-Supervisor : Dr. Parham Moradi &ndash; Advisor : Dr. Fardin Akhlaghian Tab <br />
+Supervisor: Dr. Parham Moradi &ndash; Advisor : Dr. Fardin Akhlaghian Tab <br />
 <b> <i>University of Kurdistan, Sanandaj, Iran</i> </b></p>
 <h3><b>Bachelor's Degree</b> (Jan 2012 - Jun 2014) <br /></h3>
 <p><b>Software Engineering</b> <br />
-Project title : Manufacturing and Setting up a Video Conferencing Software <br />
+Project title: Manufacturing and Setting up a Video Conferencing Software <br />
 <b> <i>Amirkabir Technical College, Arak, Iran</i> </b></p>
 <h3><b>Associate Degree</b> (Jan 2009 - Jun 2011) <br /></h3>
 <p><b>Computer Software</b> <br />
