--- a/students.html
+++ b/students.html
@@ -173,7 +173,7 @@ html {
     </h5>	
 	  <b>Alumni</b><br>
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
-		[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani & Dr. Akhlaghian) | 2021-2022
+		[Master] Maryam Mozafari (Supervisor: Dr. Pir Mohammadiani - Advisor: Dr. Akhlaghian) | 2021-2022
 	<br>
 		[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
     </h5>
