--- a/Students.html
+++ b/Students.html
@@ -56,7 +56,7 @@
 <tr class="r11"><td class="c1">Negin Jabbari</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Reza Mahmoodi) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>multi-view representation</b> </td></tr>
 <tr class="r12"><td class="c1">Zahra Mohseni Rad</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>hyperspectral unmixing</b> </td></tr>
 <tr class="r13"><td class="c1">Shirin Moradi</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>anomaly detection in hyperspectral images</b> </td></tr>
-<tr class="r14"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>unsupervised feature selection</b> </td></tr>
+<tr class="r14"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> (Supervisor: Dr. Pir Mohammadiani - Advisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>unsupervised feature selection</b> </td></tr>
 <tr class="r15"><td class="c1">Negar Hadipour</td><td class="c2"> (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) </td><td class="c3"> 2017-2019</td><td class="c4"> <b>semi-supervised learning</b> 
 </td></tr></table>
 </td>
